--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-	"name": "test-theme",
-	"version": "0.0.1",
+	"name": "May the 4th",
+	"version": "1.0.0",
 	"minAppVersion": "1.0.0",
 	"author": "maryarusinova",
 	"authorUrl": "https://github.com/maryarusinova"
